Adding movie_review page
Adding movie_review page. Will need to update and clean later.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <ul>
                 <li><a href="home">Home</a></li>
                 <li><a href="moviesPage">Movies</a></li>
-                <LI><a href="signinPage">Sign in /My Account</a></LI>
+                <li><a href="signinPage">Sign in /My Account</a></li>
+                <li><a href="account_creation.html">Sign Up</a></li>
             </ul>
         </nav>
     </div>
