--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Movie Review Blog</title>
-    <link rel="stylesheet" href="indexfile.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Blog by CEL</title>
 </head>
+<link rel="stylesheet" href="movieApi.css">
 <body>
-    <h2>This page is under construction.  </h2>
-    <div>
-        <class="header">
-        <nav>
-            <ul>
-                <li><a href="home">Home</a></li>
-                <li><a href="moviesPage">Movies</a></li>
-                <li><a href="signinPage">Sign in /My Account</a></li>
-                <li><a href="account_creation.html">Sign Up</a></li>
-            </ul>
-        </nav>
+    <center><h1>Movie API</h1></center>
+    <div class="movie-container">
+        <ul class="movies"></ul>
     </div>
-    <div class="container">
-        <div class="image container">
-            <img src="movieIndex.jpg" alt="movies">
-        </div>
-    </div>
-    
+    <script src="./myapp.js"></script>
 </body>
 </html>
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Blog by CEL</title>
+</head>
+<link rel="stylesheet" href="movieApi.css">
+<body>
+    <center><h1>Movie API</h1></center>
+    <div class="movies"></div>
+    <script src="./myapp.js"></script>
+</body>
+</html>
+-->
