Folder Hierarchy Overhaul + Account Database Feature
Overhaul the folder hierarchy for better organization and added account database feature.

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Movie Review Blog</title>
-    <link rel="stylesheet" href="indexfile.css">
+    <title>Movie Lovers - Homepage</title>
+    <link rel="stylesheet" href="../css/indexfile.css">
 
 </head>
 <body>
@@ -13,15 +13,15 @@
         <nav>
             <ul>
                 <li><a href="home">Home</a></li>
-                <li><a href="moviesPage">Movies</a></li>
-                <li><a href="signinPage">Sign in /My Account</a></li>
+                <li><a href="movies.html">Movies</a></li>
+                <li><a href="signin.html">Sign in /My Account</a></li>
                 <li><a href="account_creation.html">Sign Up</a></li>
             </ul>
         </nav>
     </div>
     <div class="container">
         <div class="image container">
-            <img src="movieIndex.jpg" alt="movies">
+            <img src="../images/movieIndex.jpg" alt="movies">
         </div>
     </div>
     
