--- a/pages/signin.html
+++ b/pages/signin.html
@@ -6,12 +6,14 @@
     <title>Movie Lovers - User Sign in</title>
     <!-- CSS Stylesheet (Used for both signin page and register page)-->
     <link rel="stylesheet" type="text/css" href="../css/signin_register.css">
+    <!-- Font for the Entire Site -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 </head>
 <body>
     <!-- Logo (User can click this to go to 'index.html') -->
     <p>
         <div class="logo">
-            <a href="index.html"><img src="../images/movieIndex.jpg" alt="logo"></a>
+            <a href="index.html"><img src="../images/logo_beige_background.png" alt="logo"></a>
         </div>
     </p>
 
@@ -22,7 +24,7 @@
         </p>
         
         <!-- Sign in -->
-        <form action="validate_user.php" method="post">
+        <form action="../php/validate_user.php" method="post">
             <div class="table_container">
                 <table id="myTable">
                     <!-- Email -->
