--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-links">
             <a href="home.html">Home</a>
-            <a href="singIn">Sign In</a>
+            <a href="Sing In / Creater an Account">Sign In / My Account</a>
         </div>
     </header>
 
